--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@nuxt/image": "^1.4.0",
     "@nuxtjs/google-fonts": "^3.1.3",
     "@nuxtjs/tailwindcss": "^6.11.4",
+    "@pinia/nuxt": "^0.5.1",
     "@vee-validate/nuxt": "^4.12.6",
     "@vueform/vueform": "^1.9.1",
     "nuxt": "^3.10.3",
     "nuxt-icon": "^0.6.9",
+    "pinia": "^2.1.7",
     "vee-validate": "^4.12.6",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
